--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "editorconfig-checker": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^7.0.1",
     "gulp-cheerio": "^1.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
-    "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
@@ -36,14 +39,13 @@
     "gulp-rev-rewrite": "^4.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^4.1.0", 
+    "gulp-svgmin": "^4.1.0",
+    "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "gulp-zip": "^5.1.0",
     "node-w3c-validator": "^2.0.1",
     "postcss": "^8.4.5",
     "postcss-scss": "^4.0.2",
-    "sass": "^1.45.1", 
-    "webpack": "^5.65.0",
-    "webpack-stream": "^7.0.0"
+    "sass": "^1.45.1"
   }
 }
